--- a/mycss/style.css
+++ b/mycss/style.css
@@ -12,6 +12,7 @@ header{
 }
 
 nav ul{
+    flex-wrap: wrap;
     list-style-type: none;
     padding: 0;
     display: flex;
@@ -43,3 +44,20 @@ footer{
     width: 100%;
     bottom: 0;
 }
+
+.btn {
+  display: inline-block;
+  background-color: #292929;
+  color: white;
+  padding: 10px 20px;
+  margin: 10px;
+  text-decoration: none;
+  border-radius: 5px;
+  transition: background-color 0.3s ease;
+  border: solid #484848;
+}
+
+.btn:hover {
+  background-color: orange;
+}
+
