--- a/mycss/style.css
+++ b/mycss/style.css
@@ -61,3 +61,44 @@ footer{
   background-color: orange;
 }
 
+a{
+    text-decoration: none;
+}
+
+.company_trainees{
+    width: 100%;
+    height: 250px;
+    border-radius: 8px;
+    /* margin: 10px; */
+    /* border: #000 solid 1px; */
+    margin-top: 10px;
+}
+
+.company_trainees ul li{
+    display: inline;
+    margin-right: 85px;
+}
+
+.company_trainees img{
+    border-radius: 50%;
+    object-fit: cover;
+}
+
+.company_trainees h1{
+    margin-bottom: 35px;
+    margin-top: 35px;
+    margin-left: 35px;
+}
+
+.company_trainees ul {
+  padding: 0;
+  display: flex;
+  justify-content: center;
+  gap: 50px;
+  list-style-type: none;
+}
+
+.company_trainees ul li {
+  text-align: center;
+  width: 180px;
+}
