--- a/mycss/style.css
+++ b/mycss/style.css
@@ -67,7 +67,7 @@ a{
 
 .company_trainees{
     width: 100%;
-    height: 250px;
+    min-height: 250px;
     border-radius: 8px;
     /* margin: 10px; */
     /* border: #000 solid 1px; */
