--- a/mycss/style.css
+++ b/mycss/style.css
@@ -106,3 +106,19 @@ a{
 .company_trainees h2{
     text-align: center;
 }
+
+.job-listing {
+  padding: 10px;
+  margin: 15px auto;
+  max-width: 700px;
+  border-radius: 8px;
+}
+
+.job-listing h2 {
+  color: #292929;
+}
+
+.job-listing ul {
+  margin-top: 10px;
+  padding-left: 20px;
+}
