--- a/mycss/style.css
+++ b/mycss/style.css
@@ -1,124 +1,150 @@
-body{
+
+body {
     font-family: cursive;
     margin: 0;
     padding: 0;
 }
 
-header{
+header {
     background-color: #292929;
     color: #fff;
     padding: 20px;
     text-align: center;
 }
 
-nav ul{
-    flex-wrap: wrap;
-    list-style-type: none;
+nav ul {
+    list-style: none;
     padding: 0;
     display: flex;
+    flex-wrap: wrap;
     justify-content: center;
     gap: 15px;
+    margin: 0;
 }
 
-nav ul li a{
+nav ul li a {
     color: #fff;
     text-decoration: none;
 }
 
-main{
-    padding: 20px;
-    background-color: orange;
-    container: flex;
-    flex-direction: column;
-    min-height: calc(100vh - 100px); /*had to google this*/
-    flex: 1;
-    display: flex;
+main a {
+    text-decoration: none;
 }
 
-footer{
+main {
+    padding: 20px;
+    background-color: orange;
+    display: flex;
+    flex-direction: column;
+    min-height: calc(100vh - 100px);
+    flex: 1;
+}
+
+footer {
     text-align: center;
     padding: 10px;
     background-color: #292929;
     color: #fff;
-    position: fixed;
     width: 100%;
+    position: fixed;
     bottom: 0;
 }
 
 .btn {
-  display: inline-block;
-  background-color: #292929;
-  color: white;
-  padding: 10px 20px;
-  margin: 10px;
-  text-decoration: none;
-  border-radius: 5px;
-  transition: background-color 0.3s ease;
-  border: solid #484848;
+    display: inline-block;
+    background-color: #292929;
+    padding: 10px 20px;
+    margin: 10px;
+    text-align: center;
+    text-decoration: none;
+    border-radius: 5px;
+    transition: background-color 0.3s ease;
+    border: solid #484848;
 }
 
 .btn:hover {
-  background-color: orange;
+    background-color: orange;
 }
 
-a{
-    text-decoration: none;
-}
-
-.company_trainees{
+.company_trainees {
     width: 100%;
     min-height: 250px;
     border-radius: 8px;
-    /* margin: 10px; */
-    /* border: #000 solid 1px; */
     margin-top: 10px;
+    text-align: center;
 }
 
-.company_trainees ul li{
-    display: inline;
-    margin-right: 85px;
+.company_trainees ul {
+    list-style: none;
+    padding: 0;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 30px;
+    margin: 0;
 }
 
-.company_trainees img{
+.company_trainees ul li {
+    text-align: center;
+    width: 180px;
+}
+
+.company_trainees img {
     border-radius: 50%;
     object-fit: cover;
 }
 
-.company_trainees h1{
-    margin-bottom: 35px;
-    margin-top: 35px;
-    margin-left: 35px;
-}
-
-.company_trainees ul {
-  padding: 0;
-  display: flex;
-  justify-content: center;
-  gap: 50px;
-  list-style-type: none;
-}
-
-.company_trainees ul li {
-  text-align: center;
-  width: 180px;
-}
-
-.company_trainees h2{
-    text-align: center;
-}
-
 .job-listing {
-  padding: 10px;
-  margin: 15px auto;
-  max-width: 700px;
-  border-radius: 8px;
+    padding: 15px;
+    margin: 15px auto;
+    max-width: 700px;
+    border-radius: 8px;
 }
 
 .job-listing h2 {
-  color: #292929;
+    color: #292929;
 }
 
 .job-listing ul {
-  margin-top: 10px;
-  padding-left: 20px;
+    margin-top: 10px;
+    padding-left: 20px;
+}
+
+/* Mobile Responsive Adjustments */
+@media screen and (max-width: 768px) {
+    header h1, main h2, footer p {
+        font-size: 1.2em;
+    }
+
+    nav ul {
+        flex-direction: column;
+        align-items: center;
+        gap: 10px;
+    }
+
+    .btn {
+        width: 90%;
+        margin: 5px 0;
+    }
+
+    .company_trainees ul {
+        flex-direction: column;
+    }
+
+    .company_trainees ul li {
+        width: 90%;
+    }
+
+    .job-listing {
+        width: 95%;
+    }
+
+    body, main {
+        padding: 10px;
+    }
+
+    footer {
+        position: static;
+        margin-top: 20px;
+    }
 }
