--- a/mycss/style.css
+++ b/mycss/style.css
@@ -38,6 +38,7 @@ main {
     flex-direction: column;
     min-height: calc(100vh - 100px);
     flex: 1;
+    align-items: center;
 }
 
 footer {
@@ -147,4 +148,50 @@ footer {
         position: static;
         margin-top: 20px;
     }
+}
+
+.job-form {
+    max-width: 500px;
+    width: 100%;
+    margin: auto;
+    background-color: #1e1e1e; /* Slightly lighter to stand out */
+    color: white;
+    padding: 30px;
+    border-radius: 8px;
+    box-shadow: 0 0 15px rgba(0, 0, 0, 0.5); /* Shadow adds separation */
+    padding-bottom: 50px;
+}
+
+
+.job-form input, .job-form select, .job-form textarea {
+    width: 100%;
+    padding: 8px;
+    margin-top: 4px;
+    margin-bottom: 12px;
+    /* margin-right: 50px; */
+    border: 1px solid #ccc;
+    border-radius: 5px;
+}
+
+.course-links {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 15px;
+    margin-top: 20px;
+    text-decoration: none ;
+    color: white
+}
+
+
+a.btn {
+  color: white;
+}
+
+a.btn:hover {
+  color: white;
+}
+
+input.btn{
+    color: white;
 }
